--- a/src/Componentes/Datos/estilos.css
+++ b/src/Componentes/Datos/estilos.css
@@ -85,11 +85,12 @@
   padding: 10px;
   border-radius: 7px;
   font-weight: 600;
-  background-color:rgb(255, 187, 0);
+  background-color:rgb(37, 79, 15);
+  color: #fdfdfd;
 }
 
 .Datos-botonActualizar:hover {
-  background-color: rgba(47, 107, 62, 0.5);
+  background-color: rgba(5, 74, 23, 0.908);
 }
 
 /* Barra de avance sticky en la parte superior */
