--- a/src/Paginas/LoginUsuariosSeguridad/estilos.css
+++ b/src/Paginas/LoginUsuariosSeguridad/estilos.css
@@ -1,4 +1,3 @@
-/* src/paginas/LoginUsuariosSeguridad/estilosSeguridad.css */
 
 /* CONTENEDOR PRINCIPAL (Ocupa toda la pantalla) */
 .LoginSeguridad-contenedor {
@@ -12,9 +11,8 @@
   background-color: #ffffff; 
 }
 
-/* 1. LOGO (Tamaño referencia: 150px) */
 .LoginSeguridad-logo {
-  width: 150px;
+  width: 100px;
   height: auto;
   margin-bottom: 10px;
 }
@@ -24,7 +22,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 2rem; /* Tamaño grande y legible como en la foto */
+  font-size: 2rem; 
   font-weight: bold;
   margin-bottom: 5px;
   color: #333;
@@ -35,17 +33,10 @@
   color: #2c3e50; /* Integr (Gris oscuro/Azul) */
 }
 .LoginSeguridad-titulo-brand span:last-child {
-  color: rgb(141, 199, 63); /* App (Verde exacto de la referencia) */
+  color: rgb(141, 199, 63); 
+  margin: 5px;
 }
 
-/* 3. SUBTÍTULO (Ingreso Seguridad) */
-.LoginSeguridad-subtitulo {
-  font-size: 1.2rem;
-  font-weight: 700;
-  color: #444;
-  margin-top: 0;
-  margin-bottom: 20px; /* Separación antes de la tarjeta blanca */
-}
 
 /* 4. TARJETA DEL FORMULARIO (Caja blanca) */
 /* Usando las medidas exactas de tu referencia .InicioPropietarios-formulario */
@@ -55,7 +46,7 @@
   width: 90%;
   max-width: 400px;
   background: white;
-  padding: 30px 20px; /* Un poco más de padding vertical */
+  padding: 20px 20px; /* Un poco más de padding vertical */
   border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); /* Sombra exacta de referencia */
   box-sizing: border-box;
