--- a/src/Paginas/PanelConductores/estilos.css
+++ b/src/Paginas/PanelConductores/estilos.css
@@ -391,6 +391,7 @@ body, html {
   gap: 10px;
   transition: all 0.2s ease;
   font-size: 1rem;
+  margin-top: 10px;
 }
 
 .btn-seleccion-vehiculo:hover {
